== In Git

=== New features
* Added * as a synonym for Given/When/Then/And/But (for all i18n languages). (#462 Aslak Hellesøy)
* The HTML formatter produces a much nicer report, with TextMate link integration. (Rob Aldred)

=== Changed Features
* Per-word trailing-space setting for step keywords using '<'.  See 'fr' in languages.yml for example. (#525 Gregory Hnatiuk)
* --language is deprecated and will be removed in 0.5.0: http://wiki.github.com/aslakhellesoy/cucumber/spoken-languages (Aslak Hellesøy)
* Formatters will no longer be passed File objects. They must use ensure_io, ensure_file or ensure_dir. (Aslak Hellesøy)
* TODO: Move to cucumber-rails. Webrat step "Then I should be on" should use request_uri instead of path for missing query string parameters (ZhangJinzhu)

== 0.4.4 2009-11-13

What a bad day to make a release, but here goes.

=== New features
* Cucumber should use ActiveSupport::Callbacks for fixtures (#516 Adam Salter)
* Make 'I' optional in all webrat steps. (Gavin Hughes)
* Make generated cucumber.rake work with a vendored gem (Alex Rothenberg)
* Native support for ANSIColor on IronRuby via the iron-term-ansicolor gem (Will Green)
* Call a bunch of steps from step definitions - also with tables or pystrings. Copy-paste friendly (Bodaniel Jeanes, Jack Chen, Aslak Hellesøy)

=== Bugfixes
* Pretty printer fails when expanding scenario outlines with -x when the background includes a table (#515 Mike Sassak)
* Ensure tags used with Before/After hooks always get parsed (#520 Joseph Wilk)
* Define IRONRUBY correctly on Ruby 1.9 (Joe Van Dyk)
* RbStepDefinition#invoke calls #backtrace_line on self rather than @proc (#503 Mike Sassak)
* Avoid duplicate cucumber entries in database.yml (Daniel Hofstetter)
* Added respond_to? when checking config.cache_classes for older Rails versions (Jeremy Durham)

=== Changed Features
* The code for Czech has changed from cz to cs. (deepj)